# schemod

./: .gitignore  .gitmodules  ChangeLog  Makefile.am  configure.ac
m4/: ChangeLog
po/: ChangeLog  LINGUAS  Makevars  POTFILES.in  es.po  schemod.pot
src/: Makefile.am  config.h  config.h.in  event.cpp  event.h  game.cpp  game.h  gettext.scm  h2scm.pl  hello.scm  hook.cpp  hook.h  main.cpp  schemod_inc.h
